Be explicit about photographer

--- a/content/topics/people/t/terry-pratchett/10.12.12TerryPratchettByLuigiNovi1.jpg.md
+++ b/content/topics/people/t/terry-pratchett/10.12.12TerryPratchettByLuigiNovi1.jpg.md
@@ -1,6 +1,7 @@
 ---
 title: "10.12.12TerryPratchettByLuigiNovi1.jpg"
 license: "Creative Commons Attribution 3.0 Unported"
+photographer: Luigi Novi
 picture: content/topics/people/terry-pratchett/10.12.12TerryPratchettByLuigiNovi1.jpg
 type: picture
 url: /commons.wikimedia.org/wiki/10.12.12TerryPratchettByLuigiNovi1.jpg/
