--- a/content/topics/people/t/terry-pratchett/10.12.12TerryPratchettByLuigiNovi1.jpg.md
+++ b/content/topics/people/t/terry-pratchett/10.12.12TerryPratchettByLuigiNovi1.jpg.md
@@ -3,12 +3,12 @@ title: "10.12.12TerryPratchettByLuigiNovi1.jpg"
 license: "Creative Commons Attribution 3.0 Unported"
 photographer: Luigi Novi
 picture: content/topics/people/terry-pratchett/10.12.12TerryPratchettByLuigiNovi1.jpg
+related: Terry Pratchett (en.wikipedia.org)
 type: picture
 url: /commons.wikimedia.org/wiki/10.12.12TerryPratchettByLuigiNovi1.jpg/
 website: "https://commons.wikimedia.org/wiki/File:10.12.12TerryPratchettByLuigiNovi1.jpg"
 tags:
   - Terry Pratchett
   - photograph
-  - Terry Pratchett (en.wikipedia.org)
 ---
 Novelist Terry Pratchett on Day 2 of the 2012 New York Comic Con, Friday October 12, 2012 at the Jacob K. Javits Convention Center in Manhattan. Photo by Luigi Novi.
