--- a/content/camera-roll/2008/05/2008-05-04-john-golf.md
+++ b/content/camera-roll/2008/05/2008-05-04-john-golf.md
@@ -13,5 +13,6 @@ tags:
   - John
   - disc golf
   - Code Camp Road Trip
+  - favorite photo
 ---
 We stopped at a park on the drive back and played a game of golf. John looked so cool. He is one of the most interesting people I know.
