--- a/content/camera-roll/2020/08/2020-08-19-nc-4648-in-seatac.md
+++ b/content/camera-roll/2020/08/2020-08-19-nc-4648-in-seatac.md
@@ -3,10 +3,12 @@ title: "NC-4648 in SeaTac"
 date: 2023-08-19
 picture: content/camera-roll/2020/08/2020-08-19-nc-4648-in-seatac/nc-4648-in-seatac.jpg
 thumbnail: content/camera-roll/2020/08/2020-08-19-nc-4648-in-seatac/nc-4648-in-seatac.thumbnail.jpg
+TODO: Link to information about moiré patterns
 type: picture
 tags:
   - airplane
   - NC-4648
   - Seattle–Tacoma International Airport
   - moiré pattern
+  - TODO
 ---
