--- a/content/topics/emoji/animals/fish/🐡.md
+++ b/content/topics/emoji/animals/fish/🐡.md
@@ -1,10 +1,10 @@
 ---
-title: "🐟"
-name: "fish"
+title: "🐡"
+name: "blowfish"
 related:
-  - 🐡
+  - 🐟
 type: emoji
-url: /🐟/
+url: /🐡/
 tags:
   - fish
   - emoji
