--- a/content/topics/emoji/animals/fish/🦈.md
+++ b/content/topics/emoji/animals/fish/🦈.md
@@ -1,12 +1,13 @@
 ---
-title: "🐟"
-name: "fish"
+title: "🦈"
+name: "shark"
 related:
+  - 🐟
   - 🐡
-  - 🦈
 type: emoji
-url: /🐟/
+url: /🦈/
 tags:
   - fish
+  - shark
   - emoji
 --- 
