--- a/content/topics/emoji/moon/🌓.md
+++ b/content/topics/emoji/moon/🌓.md
@@ -1,10 +1,10 @@
 ---
-title: "🌑"
-name: "new moon"
+title: "🌓"
+name: "first quarter moon"
 related:
-  - 🌓
+  - 🌑
 type: emoji
-url: /🌑/
+url: /🌓/
 tags:
   - moon
   - astronomy
