--- a/content/topics/emoji/moon/🌔.md
+++ b/content/topics/emoji/moon/🌔.md
@@ -1,11 +1,11 @@
 ---
-title: "🌓"
-name: "first quarter moon"
+title: "🌔"
+name: "waxing gibbous moon"
 related:
   - 🌑
-  - 🌔
+  - 🌓
 type: emoji
-url: /🌓/
+url: /🌔/
 tags:
   - moon
   - astronomy
