--- a/content/topics/emoji/moon/🌕.md
+++ b/content/topics/emoji/moon/🌕.md
@@ -1,12 +1,12 @@
 ---
-title: "🌑"
-name: "new moon"
+title: "🌕"
+name: "full moon"
 related:
+  - 🌑
   - 🌓
   - 🌔
-  - 🌕
 type: emoji
-url: /🌑/
+url: /🌕/
 tags:
   - moon
   - astronomy
