--- a/content/topics/emoji/moon/🌒.md
+++ b/content/topics/emoji/moon/🌒.md
@@ -1,13 +1,13 @@
 ---
-title: "🌑"
-name: "new moon"
+title: "🌒"
+name: "waxing cresent moon"
 related:
-  - 🌒
+  - 🌑
   - 🌓
   - 🌔
   - 🌕
 type: emoji
-url: /🌑/
+url: /🌒/
 tags:
   - moon
   - astronomy
