--- a/content/topics/emoji/moon/🌖.md
+++ b/content/topics/emoji/moon/🌖.md
@@ -1,14 +1,14 @@
 ---
-title: "🌓"
-name: "first quarter moon"
+title: "🌖"
+name: "waning gibbous moon"
 related:
   - 🌑
   - 🌒
+  - 🌓
   - 🌔
-  - 🌕
   - 🌖
 type: emoji
-url: /🌓/
+url: /🌖/
 tags:
   - moon
   - astronomy
