--- a/content/topics/emoji/moon/🌗.md
+++ b/content/topics/emoji/moon/🌗.md
@@ -1,15 +1,15 @@
 ---
-title: "🌓"
-name: "first quarter moon"
+title: "🌗"
+name: "last quarter moon"
 related:
   - 🌑
   - 🌒
+  - 🌓
   - 🌔
   - 🌕
   - 🌖
-  - 🌗
 type: emoji
-url: /🌓/
+url: /🌗/
 tags:
   - moon
   - astronomy
