--- a/content/topics/emoji/moon/🌘.md
+++ b/content/topics/emoji/moon/🌘.md
@@ -1,16 +1,16 @@
 ---
-title: "🌒"
-name: "waxing cresent moon"
+title: "🌘"
+name: "waning cresent moon"
 related:
   - 🌑
+  - 🌒
   - 🌓
   - 🌔
   - 🌕
   - 🌖
-  - 🌗
   - 🌘
 type: emoji
-url: /🌒/
+url: /🌘/
 tags:
   - moon
   - astronomy
