--- a/content/topics/people/t/terry-pratchett/10.12.12TerryPratchettByLuigiNovi1.jpg.md
+++ b/content/topics/people/t/terry-pratchett/10.12.12TerryPratchettByLuigiNovi1.jpg.md
@@ -1,9 +1,12 @@
 ---
-title: "10.12.12TerryPratchettByLuigiNovi1.jpg"
+title: "10.12.12TerryPratchettByLuigiNovi1.jpg (commons.wikimedia.org)"
+event-date: 2023-10-12
 license: "Creative Commons Attribution 3.0 Unported"
 photographer: Luigi Novi
-picture: content/topics/people/terry-pratchett/10.12.12TerryPratchettByLuigiNovi1.jpg
+picture: https://upload.wikimedia.org/wikipedia/commons/7/7a/10.12.12TerryPratchettByLuigiNovi1.jpg
 related: Terry Pratchett (en.wikipedia.org)
+thumbnail: >-
+  https://upload.wikimedia.org/wikipedia/commons/thumb/7/7a/10.12.12TerryPratchettByLuigiNovi1.jpg/371px-10.12.12TerryPratchettByLuigiNovi1.jpg
 type: picture
 url: /commons.wikimedia.org/wiki/10.12.12TerryPratchettByLuigiNovi1.jpg/
 website: "https://commons.wikimedia.org/wiki/File:10.12.12TerryPratchettByLuigiNovi1.jpg"
