Change from event-date to when

--- a/content/topics/people/t/terry-pratchett/10.12.12TerryPratchettByLuigiNovi1.jpg.md
+++ b/content/topics/people/t/terry-pratchett/10.12.12TerryPratchettByLuigiNovi1.jpg.md
@@ -1,6 +1,5 @@
 ---
 title: "10.12.12TerryPratchettByLuigiNovi1.jpg (commons.wikimedia.org)"
-event-date: 2023-10-12
 license: "Creative Commons Attribution 3.0 Unported"
 photographer: Luigi Novi
 picture: https://upload.wikimedia.org/wikipedia/commons/7/7a/10.12.12TerryPratchettByLuigiNovi1.jpg
@@ -10,6 +9,7 @@ thumbnail: >-
 type: picture
 url: /commons.wikimedia.org/wiki/10.12.12TerryPratchettByLuigiNovi1.jpg/
 website: "https://commons.wikimedia.org/wiki/File:10.12.12TerryPratchettByLuigiNovi1.jpg"
+when: 2023-10-12
 tags:
   - Terry Pratchett
   - photograph
