--- a/content/topics/emoji/animals/crustaceans/🦐.md
+++ b/content/topics/emoji/animals/crustaceans/🦐.md
@@ -1,14 +1,14 @@
 ---
-title: "🦀"
-name: "crab"
+title: "🦐"
+name: "shrimp"
 related:
-  - ♋
+  - 🦀
   - 🦞
-  - 🦐
+  - ♋
 type: emoji
-url: /🦀/
+url: /🦐/
 tags:
-  - crab
+  - shrimp
   - crustacean
   - emoji
 --- 
