--- a/content/topics/emoji/animals/insects/🐞.md
+++ b/content/topics/emoji/animals/insects/🐞.md
@@ -1,14 +1,14 @@
 ---
-title: "🐜"
-name: "ant"
+title: "🐞"
+name: "lady beetle"
 related:
   - 🐝
-  - 🐞
+  - 🐜
   - 🦋
 type: emoji
-url: /🐜/
+url: /🐞/
 tags:
-  - ant
+  - lady beetle
   - insect
   - emoji
 ---
