--- a/content/topics/emoji/animals/insects/🦟.md
+++ b/content/topics/emoji/animals/insects/🦟.md
@@ -1,15 +1,15 @@
 ---
-title: "🐜"
-name: "ant"
+title: "🦟"
+name: "mosquito"
 related:
+  - 🐜
   - 🐝
   - 🐞
   - 🦋
-  - 🦟
 type: emoji
-url: /🐜/
+url: /🦟/
 tags:
-  - ant
+  - mosquito
   - insect
   - emoji
 ---
