Chinese Communist Party (en.wikipedia.org)

--- a/content/topics/people/k/katie-britt/2024-republican-address/47.md
+++ b/content/topics/people/k/katie-britt/2024-republican-address/47.md
@@ -3,6 +3,8 @@ title: >-
   "The CCP knows that if it conquers the minds of our next generation, it conquers America."
 next: >-
   "And what does President Biden do? He bans TikTok for government employees, but creates an account for his own campaign. You can’t make this stuff up!"
+related:
+  - Chinese Communist Party (en.wikipedia.org)
 url: /2024-republican-address/47/
 tags:
   - Senator Katie Britt Delivers Republican Address to the Nation (britt.senate.gov)
