--- a/content/topics/people/k/katie-britt/2024-republican-address/46.md
+++ b/content/topics/people/k/katie-britt/2024-republican-address/46.md
@@ -1,6 +1,8 @@
 ---
 title: >-
   "Meanwhile, the Chinese Communist Party is undercutting America’s workers. China is buying up our farmland, spying on our military installations, and spreading propaganda through the likes of TikTok."
+related:
+  - Chinese Communist Party (en.wikipedia.org)
 url: /2024-republican-address/46/
 tags:
   - Senator Katie Britt Delivers Republican Address to the Nation (britt.senate.gov)
