--- a/content/topics/people/k/katie-britt/2024-republican-address/06.md
+++ b/content/topics/people/k/katie-britt/2024-republican-address/06.md
@@ -3,6 +3,8 @@ title: >-
   "Like so many families across America, my husband, Wesley, and I just watched President Biden’s State of the Union Address from our living room. What we saw was the performance of a permanent politician who has actually been in office for longer than I’ve even been alive."
 next: >-
   "One thing was clear: President Biden just doesn’t get it. He’s out of touch. Under his Administration, families are worse off. Our communities are less safe, and our country is less secure."
+related:
+  - Katie Britt is married to Wesley Britt, a former NFL player. They met while attending the University of Alabama, and married on March 8, 2008.
 url: /2024-republican-address/6/
 tags:
   - Senator Katie Britt Delivers Republican Address to the Nation (britt.senate.gov)
