United States Senate (en.wikipedia.org)

--- a/content/topics/people/k/katie-britt/2024-republican-address/02.md
+++ b/content/topics/people/k/katie-britt/2024-republican-address/02.md
@@ -6,9 +6,11 @@ next: >-
 related:
   - Katie Britt (en.wikipedia.org)
   - Alabama (en.wikipedia.org)
+  - United States Senate (en.wikipedia.org)
 url: /2024-republican-address/2/
 tags:
   - Senator Katie Britt Delivers Republican Address to the Nation (britt.senate.gov)
   - Katie Britt
   - Alabama
+  - United States Senate
 ---
