United States (en.wikipedia.org)

--- a/content/topics/people/k/katie-britt/2024-republican-address/01.md
+++ b/content/topics/people/k/katie-britt/2024-republican-address/01.md
@@ -2,6 +2,8 @@
 title: "Good evening, America."
 next: >-
   "My name is Katie Britt, and I have the honor of serving the people of the great state of Alabama in the United States Senate."
+related:
+  - United States (en.wikipedia.org)
 url: /2024-republican-address/1/
 tags:
   - Senator Katie Britt Delivers Republican Address to the Nation (britt.senate.gov)
