--- a/content/topics/people/k/katie-britt/2024-republican-address/05.md
+++ b/content/topics/people/k/katie-britt/2024-republican-address/05.md
@@ -1,6 +1,8 @@
 ---
 title: >-
   "I am worried about their future – and the future of children in every corner of our nation. That’s why I invited you into our home tonight."
+next: >-
+  "Like so many families across America, my husband, Wesley, and I just watched President Biden’s State of the Union Address from our living room. What we saw was the performance of a permanent politician who has actually been in office for longer than I’ve even been alive."
 url: /2024-republican-address/5/
 tags:
   - Senator Katie Britt Delivers Republican Address to the Nation (britt.senate.gov)
