Link to Wikipedia article

--- a/content/topics/people/k/katie-britt/2024-republican-address/06.md
+++ b/content/topics/people/k/katie-britt/2024-republican-address/06.md
@@ -4,6 +4,7 @@ title: >-
 next: >-
   "One thing was clear: President Biden just doesn’t get it. He’s out of touch. Under his Administration, families are worse off. Our communities are less safe, and our country is less secure."
 related:
+  - 2024 State of the Union Address (en.wikipedia.org)
   - Katie Britt is married to Wesley Britt, a former NFL player. They met while attending the University of Alabama, and married on March 8, 2008.
 url: /2024-republican-address/6/
 tags:
