Joe Biden (en.wikipedia.org)

--- a/content/topics/people/k/katie-britt/2024-republican-address/07.md
+++ b/content/topics/people/k/katie-britt/2024-republican-address/07.md
@@ -3,6 +3,8 @@ title: >-
   "One thing was clear: President Biden just doesn’t get it. He’s out of touch. Under his Administration, families are worse off. Our communities are less safe, and our country is less secure."
 next: >-
   "I wish he understood what real families are facing around kitchen tables just like this."
+related:
+  - Joe Biden (en.wikipedia.org)
 url: /2024-republican-address/7/
 tags:
   - Senator Katie Britt Delivers Republican Address to the Nation (britt.senate.gov)
