Wesley Britt (en.wikipedia.org)

--- a/content/topics/people/k/katie-britt/2024-republican-address/09.md
+++ b/content/topics/people/k/katie-britt/2024-republican-address/09.md
@@ -5,6 +5,7 @@ next: >-
   "I know we’re not alone. Tonight, the American family needs to have a tough conversation, because the truth is, we’re all worried about the future of our nation."
 related:
   - God (en.wikipedia.org)
+  - Wesley Britt (en.wikipedia.org)
 url: /2024-republican-address/9/
 tags:
   - Senator Katie Britt Delivers Republican Address to the Nation (britt.senate.gov)
