--- a/content/topics/people/k/katie-britt/2024-republican-address/12.md
+++ b/content/topics/people/k/katie-britt/2024-republican-address/12.md
@@ -5,6 +5,7 @@ next: >-
   "Growing up sweeping the floor at my dad’s hardware store and cleaning the bathroom at my mom’s dance studio, I never could have imagined what my story would entail."
 related:
   - American Dream (en.wikipedia.org)
+  - Enterprise, Alabama (en.wikipedia.org)
 url: /2024-republican-address/12/
 tags:
   - Senator Katie Britt Delivers Republican Address to the Nation (britt.senate.gov)
