American Dream (en.wikipedia.org)

--- a/content/topics/people/k/katie-britt/2024-republican-address/14.md
+++ b/content/topics/people/k/katie-britt/2024-republican-address/14.md
@@ -3,6 +3,8 @@ title: >-
   "To think what the American Dream can do across just one generation, in just one lifetime, is truly breathtaking."
 next: >-
   "But right now, the American Dream has turned into a nightmare for so many families."
+related:
+  - American Dream (en.wikipedia.org)
 url: /2024-republican-address/14/
 tags:
   - Senator Katie Britt Delivers Republican Address to the Nation (britt.senate.gov)
