--- a/content/topics/people/k/katie-britt/2024-republican-address/15.md
+++ b/content/topics/people/k/katie-britt/2024-republican-address/15.md
@@ -3,6 +3,8 @@ title: >-
   "But right now, the American Dream has turned into a nightmare for so many families."
 next: >-
   "The true, unvarnished State of our Union begins and ends with this: Our families are hurting. Our country can do better."
+related:
+  - American Dream (en.wikipedia.org)
 url: /2024-republican-address/15/
 tags:
   - Senator Katie Britt Delivers Republican Address to the Nation (britt.senate.gov)
