State of the Union (en.wikipedia.org)

--- a/content/topics/people/k/katie-britt/2024-republican-address/16.md
+++ b/content/topics/people/k/katie-britt/2024-republican-address/16.md
@@ -3,6 +3,8 @@ title: >-
   "The true, unvarnished State of our Union begins and ends with this: Our families are hurting. Our country can do better."
 next: >-
   "And you don’t have to look any further than the crisis at our southern border to see it. President Biden inherited the most secure border of all-time. But minutes after taking office, he suspended all deportations, halted construction of the border wall, and announced a plan to give amnesty to millions."
+related:
+  - State of the Union (en.wikipedia.org)
 url: /2024-republican-address/16/
 tags:
   - Senator Katie Britt Delivers Republican Address to the Nation (britt.senate.gov)
