United States Senate (en.wikipedia.org)

--- a/content/topics/people/k/katie-britt/2024-republican-address/12.md
+++ b/content/topics/people/k/katie-britt/2024-republican-address/12.md
@@ -6,6 +6,7 @@ next: >-
 related:
   - American Dream (en.wikipedia.org)
   - Enterprise, Alabama (en.wikipedia.org)
+  - United States Senate (en.wikipedia.org)
 url: /2024-republican-address/12/
 tags:
   - Senator Katie Britt Delivers Republican Address to the Nation (britt.senate.gov)
