Joe Biden (en.wikipedia.org)

--- a/content/topics/people/k/katie-britt/2024-republican-address/17.md
+++ b/content/topics/people/k/katie-britt/2024-republican-address/17.md
@@ -3,6 +3,8 @@ title: >-
   "And you don’t have to look any further than the crisis at our southern border to see it. President Biden inherited the most secure border of all-time. But minutes after taking office, he suspended all deportations, halted construction of the border wall, and announced a plan to give amnesty to millions."
 next: >-
   "We know that President Biden didn’t just create this border crisis. He invited it with 94 executive actions in his first 100 days."
+related:
+  - Joe Biden (en.wikipedia.org)
 url: /2024-republican-address/17/
 tags:
   - Senator Katie Britt Delivers Republican Address to the Nation (britt.senate.gov)
