United States (en.wikipedia.org)

--- a/content/topics/people/k/katie-britt/2024-republican-address/21.md
+++ b/content/topics/people/k/katie-britt/2024-republican-address/21.md
@@ -3,6 +3,8 @@ title: >-
   "We wouldn’t be OK with this happening in a third-world country. This is the United States of America, and it’s past time we start acting like it."
 next: >-
   "President Biden’s border crisis is a disgrace. It’s despicable. And it’s almost entirely preventable."
+related:
+  - United States (en.wikipedia.org)
 url: /2024-republican-address/21/
 tags:
   - Senator Katie Britt Delivers Republican Address to the Nation (britt.senate.gov)
