--- a/content/topics/people/k/katie-britt/2024-republican-address/23.md
+++ b/content/topics/people/k/katie-britt/2024-republican-address/23.md
@@ -3,6 +3,8 @@ title: >-
   "From fentanyl poisonings to horrific murders… There are empty chairs tonight at kitchen tables just like this one because of President Biden’s senseless border policies."
 next: >-
   "Just think about Laken Riley. In my neighboring state of Georgia, this beautiful, 22-year-old nursing student went out on a jog one morning. But she never got the opportunity to return home. She was brutally murdered by one of the millions of illegal border crossers President Biden chose to release into our homeland."
+related:
+  - Fentanyl (en.wikipedia.org)
 url: /2024-republican-address/23/
 tags:
   - Senator Katie Britt Delivers Republican Address to the Nation (britt.senate.gov)
