Georgia (U.S. state) (en.wikipedia.org)

--- a/content/topics/people/k/katie-britt/2024-republican-address/24.md
+++ b/content/topics/people/k/katie-britt/2024-republican-address/24.md
@@ -5,6 +5,7 @@ next: >-
   "That could’ve been my daughter. It could’ve been yours."
 related:
   - Murder of Laken Riley (en.wikipedia.org)
+  - Georgia (U.S. state) (en.wikipedia.org)
 url: /2024-republican-address/24/
 tags:
   - Senator Katie Britt Delivers Republican Address to the Nation (britt.senate.gov)
