Afghanistan (en.wikipedia.org)

--- a/content/topics/people/k/katie-britt/2024-republican-address/42.md
+++ b/content/topics/people/k/katie-britt/2024-republican-address/42.md
@@ -3,6 +3,9 @@ title: >-
   "From abandoning allies in his disastrous withdrawal from Afghanistan… to desperately pushing another dangerous deal with Iran, President Biden has failed."
 next: >-
   "We’ve become a nation in retreat. And the enemies of freedom see an opportunity."
+related:
+  - Afghanistan (en.wikipedia.org)
+  - Iran (en.wikipedia.org)
 url: /2024-republican-address/42/
 tags:
   - Senator Katie Britt Delivers Republican Address to the Nation (britt.senate.gov)
