Iran (en.wikipedia.org)

--- a/content/topics/people/k/katie-britt/2024-republican-address/45.md
+++ b/content/topics/people/k/katie-britt/2024-republican-address/45.md
@@ -3,6 +3,8 @@ title: >-
   "Iran’s terrorist proxies have slaughtered Israeli Jews and American citizens. They’ve targeted commercial shipping. And they’ve attacked our troops nearly 200 times since October, killing three U.S. soldiers and two Navy SEALS."
 next: >-
   "Meanwhile, the Chinese Communist Party is undercutting America’s workers. China is buying up our farmland, spying on our military installations, and spreading propaganda through the likes of TikTok."
+related:
+  - Iran (en.wikipedia.org)
 url: /2024-republican-address/45/
 tags:
   - Senator Katie Britt Delivers Republican Address to the Nation (britt.senate.gov)
