--- a/content/topics/people/k/katie-britt/2024-republican-address/46.md
+++ b/content/topics/people/k/katie-britt/2024-republican-address/46.md
@@ -1,6 +1,8 @@
 ---
 title: >-
   "Meanwhile, the Chinese Communist Party is undercutting America’s workers. China is buying up our farmland, spying on our military installations, and spreading propaganda through the likes of TikTok."
+next: >-
+  "The CCP knows that if it conquers the minds of our next generation, it conquers America."
 related:
   - Chinese Communist Party (en.wikipedia.org)
 url: /2024-republican-address/46/
