Response to speech

--- a/content/topics/people/k/katie-britt/2024-republican-address/19.md
+++ b/content/topics/people/k/katie-britt/2024-republican-address/19.md
@@ -3,6 +3,8 @@ title: >-
   "When I first took office, I did something different. I traveled to the Del Rio sector of Texas, where I spoke to a woman who shared her story with me. She had been sex trafficked by the cartels starting at age 12. She told me not just that she was raped every day, but how many times a day she was raped."
 next: >-
   "The cartels put her on a mattress in a shoe-box of a room, and they sent men through that door, over and over again, for hours and hours on-end."
+related: >-
+  Britt spokesman Sean Ross on Saturday confirmed to The Associated Press that the senator was speaking about the account of a young Mexican woman who told of being repeatedly raped in Mexico from 2004 to 2008 — when Republican George W. Bush was the U.S. president.
 url: /2024-republican-address/19/
 tags:
   - Senator Katie Britt Delivers Republican Address to the Nation (britt.senate.gov)
