Apollo 11 (en.wikipedia.org)

--- a/content/topics/people/k/katie-britt/2024-republican-address/69.md
+++ b/content/topics/people/k/katie-britt/2024-republican-address/69.md
@@ -3,6 +3,9 @@ title: >-
   "And when we gaze upon the heavens, never forget that our DNA contains the same ingenuity that put man on the Moon."
 next: >-
   "America has been tested before, and every single time, we’ve emerged unbowed and unbroken."
+related:
+  - Apollo 11 (en.wikipedia.org)
+  - Moon (en.wikipedia.org)
 url: /2024-republican-address/69/
 tags:
   - Senator Katie Britt Delivers Republican Address to the Nation (britt.senate.gov)
