--- a/content/topics/people/k/katie-britt/2024-republican-address/69.md
+++ b/content/topics/people/k/katie-britt/2024-republican-address/69.md
@@ -9,5 +9,6 @@ related:
 url: /2024-republican-address/69/
 tags:
   - Senator Katie Britt Delivers Republican Address to the Nation (britt.senate.gov)
-  - Europe
+  - Apollo 11
+  - Moon
 ---
