--- a/content/topics/people/k/katie-britt/2024-republican-address/76.md
+++ b/content/topics/people/k/katie-britt/2024-republican-address/76.md
@@ -5,5 +5,5 @@ next: Senator Katie Britt Delivers Republican Address to the Nation (britt.senat
 url: /2024-republican-address/76/
 tags:
   - Senator Katie Britt Delivers Republican Address to the Nation (britt.senate.gov)
-  - Europe
+  - United States
 ---
