--- a/content/topics/people/k/katie-britt/2024-republican-address/68.md
+++ b/content/topics/people/k/katie-britt/2024-republican-address/68.md
@@ -6,5 +6,5 @@ next: >-
 url: /2024-republican-address/68/
 tags:
   - Senator Katie Britt Delivers Republican Address to the Nation (britt.senate.gov)
-  - Europe
+  - universe
 ---
