--- a/content/topics/people/k/katie-britt/2024-republican-address/50.md
+++ b/content/topics/people/k/katie-britt/2024-republican-address/50.md
@@ -3,6 +3,7 @@ title: >-
   "That seems like ancient history. Right now, our Commander in Chief is not in command."
 next: >-
   "The free world deserves better than a dithering and diminished leader."
+related: Commander-in-chief (en.wikipedia.org)
 url: /2024-republican-address/50/
 tags:
   - Senator Katie Britt Delivers Republican Address to the Nation (britt.senate.gov)
