Link to her announcement (snippet)

--- a/content/topics/people/k/katie-britt/2024-republican-address/04.md
+++ b/content/topics/people/k/katie-britt/2024-republican-address/04.md
@@ -3,6 +3,8 @@ title: >-
   "I’m a proud wife and mom of two school-aged kids. My daughter, Bennett, and my son, Ridgeway, are why I ran for the Senate."
 next: >-
   "I am worried about their future – and the future of children in every corner of our nation. That’s why I invited you into our home tonight."
+related: >-
+  On June 8, 2021, Britt announced her candidacy in the Republican primary for the 2022 Senate election in Alabama.
 url: /2024-republican-address/4/
 tags:
   - Senator Katie Britt Delivers Republican Address to the Nation (britt.senate.gov)
