Bless your heart (en.wikipedia.org)

--- a/content/topics/people/k/katie-britt/2024-republican-address/33.md
+++ b/content/topics/people/k/katie-britt/2024-republican-address/33.md
@@ -3,6 +3,7 @@ title: >-
   "Bless his heart. We know better."
 next: >-
   "I’ll never forget stopping at a gas station in Chilton County one evening. The gentleman working the counter told me that after retiring, he had to pick up that job in his 70s so he didn’t have to choose between going hungry or going without his medication. He said, “I did everything right, everything I was told to do – I worked hard, I saved, I was responsible.”"
+related: Bless your heart (en.wikipedia.org)
 url: /2024-republican-address/33/
 tags:
   - Senator Katie Britt Delivers Republican Address to the Nation (britt.senate.gov)
