TokTok (en.wikipedia.org)

--- a/content/topics/people/k/katie-britt/2024-republican-address/46.md
+++ b/content/topics/people/k/katie-britt/2024-republican-address/46.md
@@ -5,6 +5,7 @@ next: >-
   "The CCP knows that if it conquers the minds of our next generation, it conquers America."
 related:
   - Chinese Communist Party (en.wikipedia.org)
+  - TokTok (en.wikipedia.org)
 url: /2024-republican-address/46/
 tags:
   - Senator Katie Britt Delivers Republican Address to the Nation (britt.senate.gov)
