--- a/content/topics/works/speeches/gettysburg-address/bliss-version/3-1.md
+++ b/content/topics/works/speeches/gettysburg-address/bliss-version/3-1.md
@@ -1,5 +1,7 @@
 ---
 title: >-
   "But, in a larger sense, we can not dedicate—we can not consecrate—we can not hallow—this ground."
+next: >-
+  "The brave men, living and dead, who struggled here, have consecrated it, far above our poor power to add or detract."
 url: /gettysburg-address/bliss-version/3-1/
 ---
