--- a/content/topics/works/speeches/gettysburg-address/bliss-version/3-2.md
+++ b/content/topics/works/speeches/gettysburg-address/bliss-version/3-2.md
@@ -1,5 +1,7 @@
 ---
 title: >-
   "The brave men, living and dead, who struggled here, have consecrated it, far above our poor power to add or detract."
+next: >-
+  "The world will little note, nor long remember what we say here, but it can never forget what they did here."
 url: /gettysburg-address/bliss-version/3-2/
 ---
