--- a/content/topics/works/speeches/gettysburg-address/bliss-version/1.md
+++ b/content/topics/works/speeches/gettysburg-address/bliss-version/1.md
@@ -1,6 +1,8 @@
 ---
 title: >-
   "Four score and seven years ago our fathers brought forth on this continent, a new nation, conceived in Liberty, and dedicated to the proposition that all men are created equal."
+next: >-
+  "Now we are engaged in a great civil war, testing whether that nation, or any nation so conceived and so dedicated, can long endure."
 url: /gettysburg-address/bliss-version/1/
 when: 1863-11-19
 tags:
