--- a/content/topics/works/speeches/gettysburg-address/bliss-version/2-1.md
+++ b/content/topics/works/speeches/gettysburg-address/bliss-version/2-1.md
@@ -1,5 +1,7 @@
 ---
 title: >-
   "Now we are engaged in a great civil war, testing whether that nation, or any nation so conceived and so dedicated, can long endure."
+next: >-
+  "We are met on a great battle-field of that war."
 url: /gettysburg-address/bliss-version/2-1/
 ---
