--- a/content/topics/works/speeches/gettysburg-address/bliss-version/2-4.md
+++ b/content/topics/works/speeches/gettysburg-address/bliss-version/2-4.md
@@ -1,5 +1,7 @@
 ---
 title: >-
   "It is altogether fitting and proper that we should do this."
+next: >-
+  "But, in a larger sense, we can not dedicate—we can not consecrate—we can not hallow—this ground."
 url: /gettysburg-address/bliss-version/2-4/
 ---
