--- a/content/topics/works/speeches/gettysburg-address/bliss-version/3-3.md
+++ b/content/topics/works/speeches/gettysburg-address/bliss-version/3-3.md
@@ -1,5 +1,7 @@
 ---
 title: >-
   "The world will little note, nor long remember what we say here, but it can never forget what they did here."
+next: >-
+  "It is for us the living, rather, to be dedicated here to the unfinished work which they who fought here have thus far so nobly advanced."
 url: /gettysburg-address/bliss-version/3-3/
 ---
