--- a/content/topics/court/united-states-v-trump/entries/1.md
+++ b/content/topics/court/united-states-v-trump/entries/1.md
@@ -2,6 +2,8 @@
 title: "MOTION to seal by USA as to Donald J. Trump, Waltine Nauta. (sl) (Entered: 06/08/2023)"
 archive: >-
   https://ia902703.us.archive.org/26/items/gov.uscourts.flsd.648652/gov.uscourts.flsd.648652.1.0.pdf
+excerpt: >-
+  The Special Counsel, by and through its undersigned Assistant Special Counsel, respectfully requests that the Indictment, judicial summonses, related paperwork, and any resulting order be SEALED until the initial appearance of the first defendant or until further order of this Court, with the exceptions noted below. In support of this motion, the Special Counsel's Office submits as follows
 pdf: >-
   https://storage.courtlistener.com/recap/gov.uscourts.flsd.648652/gov.uscourts.flsd.648652.1.0.pdf
 url: /united-states-v-trump/entries/1/
