--- a/content/topics/court/united-states-v-trump/entries/1.md
+++ b/content/topics/court/united-states-v-trump/entries/1.md
@@ -4,9 +4,11 @@ archive: >-
   https://ia902703.us.archive.org/26/items/gov.uscourts.flsd.648652/gov.uscourts.flsd.648652.1.0.pdf
 excerpt: >-
   The Special Counsel, by and through its undersigned Assistant Special Counsel, respectfully requests that the Indictment, judicial summonses, related paperwork, and any resulting order be SEALED until the initial appearance of the first defendant or until further order of this Court, with the exceptions noted below. In support of this motion, the Special Counsel's Office submits as follows
+next: >-
+  ORDER granting 1 Motion to seal as to Donald J. Trump (1), Waltine Nauta (2). Signed by Ch. Magistrate Judge Edwin G. Torres on 6/8/2023. See attached document for full details. (sl) (Entered: 06/08/2023)
 pdf: >-
   https://storage.courtlistener.com/recap/gov.uscourts.flsd.648652/gov.uscourts.flsd.648652.1.0.pdf
-url: /united-states-v-trump/entries/1/
+url: /courtlistener.com/docket/67490069/united-states-v-trump/entry-1/
 website: "https://www.courtlistener.com/docket/67490069/united-states-v-trump/#entry-1"
 when: 2023-06-08
 ---
