--- a/content/topics/court/united-states-v-trump/entries/2.md
+++ b/content/topics/court/united-states-v-trump/entries/2.md
@@ -5,6 +5,8 @@ archive: >-
   https://ia802703.us.archive.org/26/items/gov.uscourts.flsd.648652/gov.uscourts.flsd.648652.2.0.pdf
 excerpt: >-
   IT IS HEREBY ORDERED that the Indictment, judicial summonses, related paperwork, and this Order shall be filed under seal until the initial appearance of the first defendant or until further order of this Court, except that the Special Counsel's Office is authorized to make limited disclosure of the fact that the Grand Jury has returned an Indictment and that there will be an initial court appearance on June 13, 2023, as follows
+next: >-
+  INDICTMENT as to Donald J. Trump (1) count(s) 1-31, 32, 33, 34, 35, 36, 37, Waltine Nauta (2) count(s) 32, 33, 34, 35, 36, 38. (sl) (Additional attachment(s) added on 6/8/2023: # 1 Restricted Unredacted Indictment) (sl). (Entered: 06/08/2023)
 pdf: >-
   https://storage.courtlistener.com/recap/gov.uscourts.flsd.648652/gov.uscourts.flsd.648652.2.0.pdf
 url: /courtlistener.com/docket/67490069/united-states-v-trump/entry-2/
