--- a/content/topics/works/speeches/gettysburg-address/bliss-version/2-2.md
+++ b/content/topics/works/speeches/gettysburg-address/bliss-version/2-2.md
@@ -4,4 +4,6 @@ title: >-
 next: >-
   "We have come to dedicate a portion of that field, as a final resting place for those who here gave their lives that that nation might live."
 url: /gettysburg-address/bliss-version/2-2/
+tags:
+  - Gettysburg Address
 ---
