--- a/content/topics/works/speeches/gettysburg-address/bliss-version/2-4.md
+++ b/content/topics/works/speeches/gettysburg-address/bliss-version/2-4.md
@@ -4,4 +4,6 @@ title: >-
 next: >-
   "But, in a larger sense, we can not dedicate—we can not consecrate—we can not hallow—this ground."
 url: /gettysburg-address/bliss-version/2-4/
+tags:
+  - Gettysburg Address
 ---
