--- a/content/topics/works/speeches/gettysburg-address/bliss-version/3-1.md
+++ b/content/topics/works/speeches/gettysburg-address/bliss-version/3-1.md
@@ -4,4 +4,6 @@ title: >-
 next: >-
   "The brave men, living and dead, who struggled here, have consecrated it, far above our poor power to add or detract."
 url: /gettysburg-address/bliss-version/3-1/
+tags:
+  - Gettysburg Address
 ---
