--- a/content/topics/works/speeches/gettysburg-address/bliss-version/3-3.md
+++ b/content/topics/works/speeches/gettysburg-address/bliss-version/3-3.md
@@ -4,4 +4,6 @@ title: >-
 next: >-
   "It is for us the living, rather, to be dedicated here to the unfinished work which they who fought here have thus far so nobly advanced."
 url: /gettysburg-address/bliss-version/3-3/
+tags:
+  - Gettysburg Address
 ---
