--- a/content/topics/works/speeches/gettysburg-address/bliss-version/3-5.md
+++ b/content/topics/works/speeches/gettysburg-address/bliss-version/3-5.md
@@ -4,6 +4,7 @@ title: >-
 next: Gettysburg Address (en.wikipedia.org)
 url: /gettysburg-address/bliss-version/3-5/
 tags:
+  - Gettysburg Address
   - God
   - freedom
 ---
