--- a/content/topics/works/speeches/gettysburg-address/bliss-version/2-1.md
+++ b/content/topics/works/speeches/gettysburg-address/bliss-version/2-1.md
@@ -4,4 +4,7 @@ title: >-
 next: >-
   "We are met on a great battle-field of that war."
 url: /gettysburg-address/bliss-version/2-1/
+tags:
+  - Gettysburg Address
+  - American Civil War
 ---
