--- a/content/topics/works/speeches/gettysburg-address/bliss-version/2-3.md
+++ b/content/topics/works/speeches/gettysburg-address/bliss-version/2-3.md
@@ -4,4 +4,6 @@ title: >-
 next: >-
   "It is altogether fitting and proper that we should do this."
 url: /gettysburg-address/bliss-version/2-3/
+tags:
+  - Gettysburg Address
 ---
