--- a/content/topics/works/speeches/gettysburg-address/bliss-version/3-2.md
+++ b/content/topics/works/speeches/gettysburg-address/bliss-version/3-2.md
@@ -4,4 +4,6 @@ title: >-
 next: >-
   "The world will little note, nor long remember what we say here, but it can never forget what they did here."
 url: /gettysburg-address/bliss-version/3-2/
+tags:
+  - Gettysburg Address
 ---
