--- a/content/topics/works/speeches/gettysburg-address/bliss-version/1.md
+++ b/content/topics/works/speeches/gettysburg-address/bliss-version/1.md
@@ -3,6 +3,9 @@ title: >-
   "Four score and seven years ago our fathers brought forth on this continent, a new nation, conceived in Liberty, and dedicated to the proposition that all men are created equal."
 next: >-
   "Now we are engaged in a great civil war, testing whether that nation, or any nation so conceived and so dedicated, can long endure."
+related:
+  - "United States Declaration of Independence (en.wikipedia.org)"
+  - "When in the Course of human events, it becomes necessary for one people to dissolve the political bands which have connected them with another, and to assume among the powers of the earth, the separate and equal station to which the Laws of Nature and of Nature's God entitle them, a decent respect to the opinions of mankind requires that they should declare the causes which impel them to the separation."
 url: /gettysburg-address/bliss-version/1/
 when: 1863-11-19
 tags:
