Lincolnatgettysburg.jpg (commons.wikimedia.org)

--- a/content/topics/works/speeches/gettysburg-address/bliss-version/2-2.md
+++ b/content/topics/works/speeches/gettysburg-address/bliss-version/2-2.md
@@ -3,7 +3,9 @@ title: >-
   "We are met on a great battle-field of that war."
 next: >-
   "We have come to dedicate a portion of that field, as a final resting place for those who here gave their lives that that nation might live."
-related: Gettysburg Battlefield (en.wikipedia.org)
+related:
+  - Gettysburg Battlefield (en.wikipedia.org)
+  - Lincolnatgettysburg.jpg (commons.wikimedia.org)
 url: /gettysburg-address/bliss-version/2-2/
 tags:
   - Gettysburg Address
