United States v. Trump (9:23-cr-80101)

--- a/content/topics/court/united-states-v-trump/entries/3/3.md
+++ b/content/topics/court/united-states-v-trump/entries/3/3.md
@@ -8,4 +8,6 @@ pdf: >-
 url: /courtlistener.com/docket/67490069/united-states-v-trump/entry-3/
 website: "https://www.courtlistener.com/docket/67490069/united-states-v-trump/#entry-3"
 when: 2023-06-08
+tags:
+  - United States v. Trump (9:23-cr-80101)
 ---
