--- a/content/topics/court/united-states-v-trump/entries/3/para/12.md
+++ b/content/topics/court/united-states-v-trump/entries/3/para/12.md
@@ -5,6 +5,6 @@ next: "13. National security information was information owned by, produced by, 
 type: snippet
 url: /united-states-v-trump/docket/3/para/12/
 tags:
-  - United States of America v. Donald J. Trump, Waltine Nauta, and Carlos De Oliveira
+  - United States v. Trump (9:23-cr-80101)
   - TRUMP
 ---
