--- a/content/topics/court/united-states-v-trump/entries/3/para/15.md
+++ b/content/topics/court/united-states-v-trump/entries/3/para/15.md
@@ -6,7 +6,7 @@ next: >-
 type: snippet
 url: /united-states-v-trump/docket/3/para/15/
 tags:
-  - United States of America v. Donald J. Trump, Waltine Nauta, and Carlos De Oliveira
+  - United States v. Trump (9:23-cr-80101)
   - SCI
   - SCIF
 ---
