--- a/content/topics/court/united-states-v-trump/entries/3/para/6-b.md
+++ b/content/topics/court/united-states-v-trump/entries/3/para/6-b.md
@@ -1,10 +1,9 @@
 ---
-title: >-
-  b. In August or September 2021, at The Bedminster Club, **TRUMP** showed a representative of his political action committee who did not possess a security clearance a classified map related to a military operation and told the representative that he should not be showing it to the representative and that the representative should not get too close. 
+title: "b. In August or September 2021, at The Bedminster Club, **TRUMP** showed a representative of his political action committee who did not possess a security clearance a classified map related to a military operation and told the representative that he should not be showing it to the representative and that the representative should not get too close."
 next: "7. On March 30, 2022, the Federal Bureau of Investigation (“FBI”) opened a criminal investigation into the unlawful retention of classified documents at The Mar-a-Lago Club. A federal grand jury investigation began the next month. The grand jury issued a subpoena requiring TRUMP to turn over all documents with classification markings. TRUMP endeavored to obstruct the FBI and grand jury investigations and conceal his continued retention of classified documents by, among other things:"
 type: snippet
 url: /united-states-v-trump/docket/3/para/6/b/
 tags:
-  - United States of America v. Donald J. Trump, Waltine Nauta, and Carlos De Oliveira
+  - United States v. Trump (9:23-cr-80101)
   - TRUMP
 ---
