--- a/content/topics/court/united-states-v-trump/entries/3/para/6.md
+++ b/content/topics/court/united-states-v-trump/entries/3/para/6.md
@@ -1,10 +1,9 @@
 ---
 title: "6. On two occasions in 2021, **TRUMP** showed classified documents to others, as follows:"
-next: >-
-  a. In July 2021, at Trump National Golf Club in Bedminster, New Jersey (“The Bedminster Club”), during an audio-recorded meeting with a writer, a publisher, and two members of his staff, none of whom possessed a security clearance, **TRUMP** showed and described a “plan of attack” that **TRUMP** said was prepared for him by the Department of Defense and a senior military official. **TRUMP** told the individuals that the plan was “highly confidential” and “secret.” **TRUMP** also said, “as president I could have declassified it,” and, “Now I can’t, you know, but this is still a secret.”
+next: "a. In July 2021, at Trump National Golf Club in Bedminster, New Jersey (“The Bedminster Club”), during an audio-recorded meeting with a writer, a publisher, and two members of his staff, none of whom possessed a security clearance, **TRUMP** showed and described a “plan of attack” that **TRUMP** said was prepared for him by the Department of Defense and a senior military official. **TRUMP** told the individuals that the plan was “highly confidential” and “secret.” **TRUMP** also said, “as president I could have declassified it,” and, “Now I can’t, you know, but this is still a secret.”"
 type: snippet
 url: /united-states-v-trump/docket/3/para/6/
 tags:
-  - United States of America v. Donald J. Trump, Waltine Nauta, and Carlos De Oliveira
+  - United States v. Trump (9:23-cr-80101)
   - TRUMP
 ---
