--- a/content/topics/court/united-states-v-trump/entries/3/para/7-a.md
+++ b/content/topics/court/united-states-v-trump/entries/3/para/7-a.md
@@ -1,11 +1,9 @@
 ---
-title: >-
-  a. suggesting that his attorney falsely represent to the FBI and grand jury that **TRUMP** did not have documents called for by the grand jury subpoena; 
-next: >-
-  b. directing defendant **WALTINE NAUTA** to move boxes of documents to conceal them from **TRUMP**’s attorney, the FBI, and the grand jury;
+title: "a. suggesting that his attorney falsely represent to the FBI and grand jury that **TRUMP** did not have documents called for by the grand jury subpoena;"
+next: "b. directing defendant **WALTINE NAUTA** to move boxes of documents to conceal them from **TRUMP**’s attorney, the FBI, and the grand jury;"
 type: snippet
 url: /united-states-v-trump/docket/3/para/7/a/
 tags:
-  - United States of America v. Donald J. Trump, Waltine Nauta, and Carlos De Oliveira
+  - United States v. Trump (9:23-cr-80101)
   - TRUMP
 ---
