--- a/content/topics/court/united-states-v-trump/entries/3/para/7-b.md
+++ b/content/topics/court/united-states-v-trump/entries/3/para/7-b.md
@@ -1,12 +1,10 @@
 ---
-title: >-
-  b. directing defendant **WALTINE NAUTA** to move boxes of documents to conceal them from **TRUMP**’s attorney, the FBI, and the grand jury;
-next: >-
-  c. suggesting that his attorney hide or destroy documents called for by the grand jury subpoena;
+title: "b. directing defendant **WALTINE NAUTA** to move boxes of documents to conceal them from **TRUMP**’s attorney, the FBI, and the grand jury;"
+next: "c. suggesting that his attorney hide or destroy documents called for by the grand jury subpoena;"
 type: snippet
 url: /united-states-v-trump/docket/3/para/7/b/
 tags:
-  - United States of America v. Donald J. Trump, Waltine Nauta, and Carlos De Oliveira
+  - United States v. Trump (9:23-cr-80101)
   - WALTINE NAUTA
   - TRUMP
 ---
