--- a/content/topics/court/united-states-v-trump/entries/3/para/7-d.md
+++ b/content/topics/court/united-states-v-trump/entries/3/para/7-d.md
@@ -1,10 +1,8 @@
 ---
-title: >-
-  d. providing to the FBI and grand jury just some of the documents called for by the grand jury subpoena, while claiming that he was cooperating fully; and  
-next: >-
-  e. causing a certification to be submitted to the FBI and grand jury falsely representing that all documents called for by the grand jury subpoena had been produced—while knowing that, in fact, not all such documents had been produced.
+title: "d. providing to the FBI and grand jury just some of the documents called for by the grand jury subpoena, while claiming that he was cooperating fully; and"
+next: "e. causing a certification to be submitted to the FBI and grand jury falsely representing that all documents called for by the grand jury subpoena had been produced—while knowing that, in fact, not all such documents had been produced."
 type: snippet
 url: /united-states-v-trump/docket/3/para/7/c/
 tags:
-  - United States of America v. Donald J. Trump, Waltine Nauta, and Carlos De Oliveira
+  - United States v. Trump (9:23-cr-80101)
 ---
