--- a/content/topics/court/united-states-v-trump/entries/3/para/7.md
+++ b/content/topics/court/united-states-v-trump/entries/3/para/7.md
@@ -1,11 +1,10 @@
 ---
 title: "7. On March 30, 2022, the Federal Bureau of Investigation (“FBI”) opened a criminal investigation into the unlawful retention of classified documents at The Mar-a-Lago Club. A federal grand jury investigation began the next month. The grand jury issued a subpoena requiring TRUMP to turn over all documents with classification markings. TRUMP endeavored to obstruct the FBI and grand jury investigations and conceal his continued retention of classified documents by, among other things:"
-next: >-
-  a. suggesting that his attorney falsely represent to the FBI and grand jury that **TRUMP** did not have documents called for by the grand jury subpoena;
+next: "a. suggesting that his attorney falsely represent to the FBI and grand jury that **TRUMP** did not have documents called for by the grand jury subpoena;"
 type: snippet
 url: /united-states-v-trump/docket/3/para/7/
 when: 2022-03-30
 tags:
-  - United States of America v. Donald J. Trump, Waltine Nauta, and Carlos De Oliveira
+  - United States v. Trump (9:23-cr-80101)
   - TRUMP
 ---
