--- a/content/topics/court/united-states-v-trump/entries/3/para/8-a.md
+++ b/content/topics/court/united-states-v-trump/entries/3/para/8-a.md
@@ -1,11 +1,9 @@
 ---
-title: >-
-  a. On January 17, nearly one year after **TRUMP** left office, and after months of demands by the National Archives and Records Administration for **TRUMP** to provide all missing presidential records, **TRUMP** provided only 15 boxes, which contained 197 documents with classification markings. 
-next: >-
-  b. On June 3, in response to a grand jury subpoena demanding the production of all documents with classification markings, **TRUMP**’s attorney provided to the FBI 38 more documents with classification markings. 
+title: "a. On January 17, nearly one year after **TRUMP** left office, and after months of demands by the National Archives and Records Administration for **TRUMP** to provide all missing presidential records, **TRUMP** provided only 15 boxes, which contained 197 documents with classification markings."
+next: "b. On June 3, in response to a grand jury subpoena demanding the production of all documents with classification markings, **TRUMP**’s attorney provided to the FBI 38 more documents with classification markings."
 type: snippet
 url: /united-states-v-trump/docket/3/para/8/a/
 tags:
-  - United States of America v. Donald J. Trump, Waltine Nauta, and Carlos De Oliveira
+  - United States v. Trump (9:23-cr-80101)
   - TRUMP
 ---
