--- a/content/topics/court/united-states-v-trump/entries/3/para/8-c.md
+++ b/content/topics/court/united-states-v-trump/entries/3/para/8-c.md
@@ -1,11 +1,9 @@
 ---
-title: >-
-  c. On August 8, pursuant to a court-authorized search warrant, the FBI recovered from **TRUMP**’s office and a storage room at The Mar-a-Lago Club 102 more documents with classification markings. 
-next: >-
-  9. Defendant **NAUTA** was a member of the United States Navy stationed as a valet in the White House during TRUMP’s presidency. Beginning in August 2021, **NAUTA** became an executive assistant in The Office of Donald J. Trump and served as **TRUMP**’s personal aide or “body man.” **NAUTA** reported to **TRUMP**, worked closely with **TRUMP**, and traveled with **TRUMP**.
+title: "c. On August 8, pursuant to a court-authorized search warrant, the FBI recovered from **TRUMP**’s office and a storage room at The Mar-a-Lago Club 102 more documents with classification markings." 
+next: "9. Defendant **NAUTA** was a member of the United States Navy stationed as a valet in the White House during TRUMP’s presidency. Beginning in August 2021, **NAUTA** became an executive assistant in The Office of Donald J. Trump and served as **TRUMP**’s personal aide or “body man.” **NAUTA** reported to **TRUMP**, worked closely with **TRUMP**, and traveled with **TRUMP**."
 type: snippet
 url: /united-states-v-trump/docket/3/para/8/c/
 tags:
-  - United States of America v. Donald J. Trump, Waltine Nauta, and Carlos De Oliveira
+  - United States v. Trump (9:23-cr-80101)
   - TRUMP
 ---
