--- a/content/topics/court/united-states-v-trump/entries/3/para/9.md
+++ b/content/topics/court/united-states-v-trump/entries/3/para/9.md
@@ -1,12 +1,11 @@
 ---
-title: >-
-  9. Defendant **NAUTA** was a member of the United States Navy stationed as a valet in the White House during TRUMP’s presidency. Beginning in August 2021, **NAUTA** became an executive assistant in The Office of Donald J. Trump and served as **TRUMP**’s personal aide or “body man.” **NAUTA** reported to **TRUMP**, worked closely with **TRUMP**, and traveled with **TRUMP**.
+title: "9. Defendant **NAUTA** was a member of the United States Navy stationed as a valet in the White House during TRUMP’s presidency. Beginning in August 2021, **NAUTA** became an executive assistant in The Office of Donald J. Trump and served as **TRUMP**’s personal aide or “body man.” **NAUTA** reported to **TRUMP**, worked closely with **TRUMP**, and traveled with **TRUMP**."
 next: >-
   10. The Mar-a-Lago Club was located on South Ocean Boulevard in Palm Beach, Florida, and included TRUMP’s residence, more than 25 guest rooms, two ballrooms, a spa, a gift store, exercise facilities, office space, and an outdoor pool and patio. As of January 2021, The Mar-a-Lago Club had hundreds of members and was staffed by more than 150 full-time, part-time, and temporary employees.
 type: snippet
 url: /united-states-v-trump/docket/3/para/9/
 tags:
-  - United States of America v. Donald J. Trump, Waltine Nauta, and Carlos De Oliveira
+  - United States v. Trump (9:23-cr-80101)
   - NAUTA
   - TRUMP
 ---
