--- a/content/topics/court/united-states-v-trump/entries/3/para/10.md
+++ b/content/topics/court/united-states-v-trump/entries/3/para/10.md
@@ -6,6 +6,6 @@ next: >-
 type: snippet
 url: /united-states-v-trump/docket/3/para/10/
 tags:
-  - United States of America v. Donald J. Trump, Waltine Nauta, and Carlos De Oliveira
+  - United States v. Trump (9:23-cr-80101)
   - TRUMP
 ---
