--- a/content/topics/court/united-states-v-trump/entries/3/para/2.md
+++ b/content/topics/court/united-states-v-trump/entries/3/para/2.md
@@ -1,11 +1,9 @@
 ---
-title: >-
-  2. Over the course of his presidency, **TRUMP** gathered newspapers, press clippings, letters, notes, cards, photographs, official documents, and other materials in cardboard boxes that he kept in the White House. Among the materials **TRUMP** stored in his boxes were hundreds of classified documents. 
-next: >-
-  3. The classified documents **TRUMP** stored in his boxes included information regarding defense and weapons capabilities of both the United States and foreign countries; United States nuclear programs; potential vulnerabilities of the United States and its allies to military attack; and plans for possible retaliation in response to a foreign attack. The unauthorized disclosure of these classified documents could put at risk the national security of the United States, foreign relations, the safety of the United States military, and human sources and the continued viability of sensitive intelligence collection methods.
+title: "2. Over the course of his presidency, **TRUMP** gathered newspapers, press clippings, letters, notes, cards, photographs, official documents, and other materials in cardboard boxes that he kept in the White House. Among the materials **TRUMP** stored in his boxes were hundreds of classified documents."
+next: "3. The classified documents **TRUMP** stored in his boxes included information regarding defense and weapons capabilities of both the United States and foreign countries; United States nuclear programs; potential vulnerabilities of the United States and its allies to military attack; and plans for possible retaliation in response to a foreign attack. The unauthorized disclosure of these classified documents could put at risk the national security of the United States, foreign relations, the safety of the United States military, and human sources and the continued viability of sensitive intelligence collection methods."
 type: snippet
 url: /united-states-v-trump/docket/3/para/2/
 tags:
-  - United States of America v. Donald J. Trump, Waltine Nauta, and Carlos De Oliveira
+  - United States v. Trump (9:23-cr-80101)
   - TRUMP
 ---
