--- a/content/topics/court/united-states-v-trump/entries/3/para/7-c.md
+++ b/content/topics/court/united-states-v-trump/entries/3/para/7-c.md
@@ -1,10 +1,8 @@
 ---
-title: >-
-  c. suggesting that his attorney hide or destroy documents called for by the grand jury subpoena; 
-next: >-
-  d. providing to the FBI and grand jury just some of the documents called for by the grand jury subpoena, while claiming that he was cooperating fully; and  
+title: "c. suggesting that his attorney hide or destroy documents called for by the grand jury subpoena;" 
+next: "d. providing to the FBI and grand jury just some of the documents called for by the grand jury subpoena, while claiming that he was cooperating fully; and"
 type: snippet
 url: /united-states-v-trump/docket/3/para/7/c/
 tags:
-  - United States of America v. Donald J. Trump, Waltine Nauta, and Carlos De Oliveira
+  - United States v. Trump (9:23-cr-80101)
 ---
