--- a/content/topics/court/united-states-v-trump/entries/3/3.md
+++ b/content/topics/court/united-states-v-trump/entries/3/3.md
@@ -1,8 +1,9 @@
 ---
 title: >-
   INDICTMENT as to Donald J. Trump (1) count(s) 1-31, 32, 33, 34, 35, 36, 37, Waltine Nauta (2) count(s) 32, 33, 34, 35, 36, 38. (sl) (Additional attachment(s) added on 6/8/2023: # 1 Restricted Unredacted Indictment) (sl). (Entered: 06/08/2023)
-archive: >-
-  https://ia902703.us.archive.org/26/items/gov.uscourts.flsd.648652/gov.uscourts.flsd.648652.3.0.pdf
+next: "1. Defendant **DONALD J. TRUMP** was the forty-fifth President of the United States ofAmerica. He held office from January 20, 2017, until January 20, 2021. As president, **TRUMP** had lawful access to the most sensitive classified documents and national defense information. gathered and owned by the United States government, including information from the agencies that comprise the United States Intelligence Community and the United States Department of Defense."
+from: "United States of America v. Donald J. Trump, Waltine Nauta, and Carlos De Oliveira"
+next: "2. Over the course of his presidency, **TRUMP** gathered newspapers, press clippings, letters, notes, cards, photographs, official documents, and other materials in cardboard boxes that he kept in the White House. Among the materials **TRUMP** stored in his boxes were hundreds of classified documents."
 pdf: >-
   https://storage.courtlistener.com/recap/gov.uscourts.flsd.648652/gov.uscourts.flsd.648652.3.0.pdf
 url: /courtlistener.com/docket/67490069/united-states-v-trump/entry-3/
