--- a/content/topics/people/k/katie-britt/2024-republican-address/24.md
+++ b/content/topics/people/k/katie-britt/2024-republican-address/24.md
@@ -9,4 +9,7 @@ related:
 url: /2024-republican-address/24/
 tags:
   - Senator Katie Britt Delivers Republican Address to the Nation (britt.senate.gov)
+  - Laken Riley
+  - Georgia
+  - Joe Biden
 ---
